common.css: better main page on narrow screen - more fixes 2

--- a/html/common.css
+++ b/html/common.css
@@ -61,7 +61,7 @@ DIV.newsblog {
 
 .newsblog-in {
   margin-left: 245px;
-  min-width: 50%;
+  min-width: 20em;
 }
 
 .newsblog-in2 {
